# qt

./: CMakeLists.txt  doubleitemdelegate.cpp  doubleitemdelegate.h  doubleitemdelegate1.cpp  doubleitemdelegate1.h  main.cpp  mainwindow.cpp  mainwindow.h
